# lifeguard

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
config/: default-example.toml
src/: backup.rs  cli.rs  config.rs  main.rs  scheduler.rs  service.rs  storage.rs
