[package]
name = "lifeguard"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.18"
serde = "1.0.228"
chrono = "0.4.42"
flate2 = "1.1.5"
aws-sdk-s3 = "1.110.0"
aws-config = "1.8.10"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-cron-scheduler = "0.15.1"
daemonize = { version = "0.5.0", optional = true }
nix = { version = "0.30.1", features = ["signal"], optional = true }
fs2 = "0.4.3"
signal-hook = { version = "0.3.18", optional = true }
tracing = "0.1.41"
clap = { version = "4.5.51", features = ["derive"] }

[features]
# Enable daemon-related crates on demand (Unix only)
daemon = ["daemonize", "nix", "signal-hook"]
